2025-04-14T01:20:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14435422730 # 613
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-14
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 956 1436 / 971 1451
* notice: next accum: outdated-unq outdated-all / unq all: 958 1438 / 972 1452
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-30 2025-03-31] / [2025-04-13]

2025-04-11T01:17:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14393486345 # 610
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-11
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 956 1436 / 969 1449
* notice: next accum: outdated-unq outdated-all / unq all: 956 1436 / 971 1451
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-04-10 2025-04-11]

2025-04-10T01:17:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14370165103 # 609
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-10
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 951 1431 / 967 1447
* notice: next accum: outdated-unq outdated-all / unq all: 956 1436 / 969 1449
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-26] / [2025-04-09 2025-04-10]

2025-04-09T01:17:24Z: