@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-04-14T01:20:41Z",
-  "count_outdated" : 1438,
-  "uniques_outdated" : 958,
-  "count" : 1452,
-  "uniques" : 972,
+  "timestamp" : "2025-04-15T01:19:53Z",
+  "count_outdated" : 1439,
+  "uniques_outdated" : 959,
+  "count" : 1454,
+  "uniques" : 974,
   "clones" : [
-    {
-      "timestamp": "2025-04-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-04-02T00:00:00Z",
       "count": 2,
@@ -97,6 +88,24 @@
     },
     {
       "timestamp": "2025-04-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
