@@ -1,12 +1,7 @@
 {
-  "count": 14,
+  "count": 15,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2025-04-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-04-02T00:00:00Z",
       "count": 2,
@@ -54,6 +49,16 @@
     },
     {
       "timestamp": "2025-04-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
